// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен рендерить набор виджетов, если волк-ин недоступен 1`] = `
<div
  className="Dashboard"
>
  <div
    className="Dashboard__title"
  >
    Дашборд
  </div>
  <div
    className="Dashboard__period"
  >
    <DashboardFilters
      dateLimits={Object {}}
      isLoading={false}
      onChangeDates={[Function]}
    />
  </div>
  <DashboardMySalesWidget
    bunkerDict={Object {}}
    chartData={Object {}}
    hasOffers={true}
    total={30}
  />
  <DashboardWalletWidget
    bunkerDict={Object {}}
    chartData={Array []}
    hasOffers={true}
    hasStats={true}
    legend={Object {}}
    routeParams={Object {}}
    total={606}
  />
  <DashboardBalanceWidget />
  <DashboardCardViewWidget
    bunkerDict={Object {}}
    chartData={Array []}
    compareData={Object {}}
    hasOffers={true}
    hasStats={true}
    total={100}
  />
  <DashboardPhoneShowWidget
    bunkerDict={Object {}}
    chartData={Array []}
    compareData={Object {}}
    conversion={20}
    hasOffers={true}
    hasStats={true}
    total={100}
  />
  <DashboardCallsWidget
    bunkerDict={Object {}}
    chartData={Object {}}
    conversion={20}
    hasCallTracking={true}
    hasOffers={true}
    hasStats={true}
    missing={2}
    received={1}
    routeParams={Object {}}
    total={20}
  />
  <DashboardWarehouseWidget
    clientId={123}
    warehouseWidget={Object {}}
  />
  <DashboardPromoFeaturesWidget
    features={
      Array [
        1,
        2,
        3,
      ]
    }
  />
</div>
`;

exports[`должен рендерить правильный набор виджетов для доступного волк-ина 1`] = `
<div
  className="Dashboard"
>
  <div
    className="Dashboard__title"
  >
    Дашборд
  </div>
  <div
    className="Dashboard__period"
  >
    <DashboardFilters
      dateLimits={Object {}}
      isLoading={false}
      onChangeDates={[Function]}
    />
  </div>
  <DashboardMySalesWidget
    bunkerDict={Object {}}
    chartData={Object {}}
    hasOffers={true}
    total={30}
  />
  <DashboardWalkInWidget
    chartData={Array []}
    routeParams={Object {}}
  />
  <DashboardBalanceWidget />
  <DashboardCardViewWidget
    bunkerDict={Object {}}
    chartData={Array []}
    compareData={Object {}}
    hasOffers={true}
    hasStats={true}
    total={100}
  />
  <DashboardPhoneShowWidget
    bunkerDict={Object {}}
    chartData={Array []}
    compareData={Object {}}
    conversion={20}
    hasOffers={true}
    hasStats={true}
    total={100}
  />
  <DashboardCallsWidget
    bunkerDict={Object {}}
    chartData={Object {}}
    conversion={20}
    hasCallTracking={true}
    hasOffers={true}
    hasStats={true}
    missing={2}
    received={1}
    routeParams={Object {}}
    total={20}
  />
  <DashboardWarehouseWidget
    clientId={123}
    warehouseWidget={Object {}}
  />
  <DashboardWalletWidget
    bunkerDict={Object {}}
    chartData={Array []}
    hasOffers={true}
    hasStats={true}
    legend={Object {}}
    routeParams={Object {}}
    total={606}
  />
  <DashboardPromoFeaturesWidget
    features={
      Array [
        1,
        2,
        3,
      ]
    }
  />
</div>
`;
